--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://email.163.com" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-wangyi"></use>
                     </svg><span>网易邮箱</span></a></li>
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.icloud.com" target="_blank"><svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-icloud"></use>
+                    </svg><span>iCloud</span></a></li>
         </ul>
         <ul class="mylist row">
             <li class="title"><svg class="icon" aria-hidden="true">
