--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <style>
                 #he-plugin-simple{ z-index: 1000; }
             </style>
-            <div id="he-plugin-simple"></div>
+            <!--<div id="he-plugin-simple"></div>
             <script>WIDGET = {CONFIG: {"modules": "10234","background": 5,"tmpColor": "4A4A4A","tmpSize": "14","cityColor": "4A4A4A","citySize": "14","aqiSize": "14","weatherIconSize": "22","alertIconSize": "16","padding": "8px 8px 8px 8px","shadow": "0","language": "auto","borderRadius": 5,"fixed": "false","vertical": "middle","horizontal": "center","key": "e5ccff104ff5459ab132c4aa503bbc08"}}</script>
-            <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
+            <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>-->
         </div>
     </nav>
     <!--topbar结束-->
