--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
                 <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z"></path>
             </svg><span>
         </button>-->
-        <div class="collapse navbar-collapse" id="navbarsExample05">
+        <!--<div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav mr-auto">
-                <!--<li class="nav-item active">
+                <li class="nav-item active">
                     <a class="nav-link" href="/">首页</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./ip" target="_blank">IP查询</a>
-                </li>-->
+                    <a class="nav-link" href="./second" target="_blank">次页</a>
+                </li>
             </ul>
             <style>
                 #he-plugin-simple{ z-index: 1000; }
             </style>
             <!--<div id="he-plugin-simple"></div>
             <script>WIDGET = {CONFIG: {"modules": "10234","background": 5,"tmpColor": "4A4A4A","tmpSize": "14","cityColor": "4A4A4A","citySize": "14","aqiSize": "14","weatherIconSize": "22","alertIconSize": "16","padding": "8px 8px 8px 8px","shadow": "0","language": "auto","borderRadius": 5,"fixed": "false","vertical": "middle","horizontal": "center","key": "e5ccff104ff5459ab132c4aa503bbc08"}}</script>
-            <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>-->
-        </div>
+            <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
+        </div>-->
     </nav>
     <!--topbar结束-->
     <div class="container" style="margin-top: 100px; position: relative; z-index: 100;">
