--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://github.com" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-github"></use>
                     </svg><span>GitHub</span></a></li>
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://www.kaochong.com" target="_blank"><svg class="icon" aria-hidden="true">
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://daxue.koolearn.com" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-kaochong"></use>
-                    </svg><span>考虫</span></a></li>
+                    </svg><span>新东方</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://mail.google.com" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-gmail"></use>
                     </svg><span>Gmail</span></a></li>
@@ -132,7 +132,7 @@
             <li class="title"><svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-ai-tool"></use>
                 </svg>效率</li>
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://translate.google.cn" target="_blank"><svg class="icon" aria-hidden="true">
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://translate.google.com" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-fanyi"></use>
                     </svg><span>谷歌翻译</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://dash.cloudflare.com" target="_blank"><svg class="icon" aria-hidden="true">
