--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://voice.google.com" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-googlevoice"></use>
                     </svg><span>Google Voice</span></a></li>
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://protonmail.com/zh-Hans" target="_blank"><svg class="icon" aria-hidden="true">
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://proton.me" target="_blank"><svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-protonmail"></use>
                     </svg><span>ProtonMail</span></a></li>
             <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://unsplash.com" target="_blank"><svg class="icon" aria-hidden="true">
